@@ -10,8 +10,8 @@
 		<name>Units of Measurement project</name>
 		<url>http://unitsofmeasurement.github.io</url>
 	</organization>
-	<description>Units of Measurement (JSR 385) TCK.</description>
-
+	<description>Units of Measurement (JSR 385) TCK</description>
+	<version>2.2-SNAPSHOT</version>
 	<parent>
 		<groupId>tech.uom</groupId>
 		<artifactId>uom-parent</artifactId>
@@ -37,15 +37,13 @@
 	<properties>
 		<jsr.version>2.2</jsr.version>
 		<ri.version>2.2</ri.version>
-		<jdkVersion>1.8</jdkVersion>
+		<jdkVersion>9</jdkVersion>
 		<project.build.javaVersion>${jdkVersion}</project.build.javaVersion>
-		<maven.compile.targetLevel>1.8</maven.compile.targetLevel>
 		<maven.compile.sourceLevel>${jdkVersion}</maven.compile.sourceLevel>
 		<testng.version>7.8.0</testng.version>
 		<jakarta.inject.version>2.0.1</jakarta.inject.version>
 		<jboss.test.audit.version>2.0.0.Final</jboss.test.audit.version>
 		<hamcrest.version>2.2</hamcrest.version>
-		<mutabilitydetector.version>0.10.6</mutabilitydetector.version>
 		<reflections.version>0.10.2</reflections.version>
 	</properties>
 
@@ -85,11 +83,6 @@
 				<version>${hamcrest.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.mutabilitydetector</groupId>
-				<artifactId>MutabilityDetector</artifactId>
-				<version>${mutabilitydetector.version}</version>
-			</dependency>
-			<dependency>
 				<groupId>org.reflections</groupId>
 				<artifactId>reflections</artifactId>
 				<version>${reflections.version}</version>
@@ -107,6 +100,12 @@
 			<artifactId>indriya</artifactId>
 			<scope>test</scope>
 			<type>jar</type>
+			<exclusions>
+        		<exclusion>
+          			<groupId>org.apiguardian</groupId>
+            		<artifactId>apiguardian-api</artifactId>
+        		</exclusion>
+      		</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>tech.uom.lib</groupId>
@@ -122,10 +121,6 @@
 			<artifactId>testng</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-library</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
@@ -135,12 +130,12 @@
 			<version>${slf4j.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.reflections</groupId>
-			<artifactId>reflections</artifactId>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-library</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.mutabilitydetector</groupId>
-			<artifactId>MutabilityDetector</artifactId>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.test-audit</groupId>
@@ -155,40 +150,46 @@
 	</dependencies>
 
 	<build>
-	<pluginManagement>
-	   <plugins>
-	           <plugin>
-                <groupId>com.mycila</groupId>
-                <artifactId>license-maven-plugin</artifactId>
-                <configuration>
-                    <header>src/main/config/header.txt</header>
-                    <properties>
-                        <owner>Jean-Marie Dautelle, Werner Keil, Otavio Santana</owner>
-                        <currentYear>2023</currentYear>
-                    </properties>
-                    <excludes>
-                    	<exclude>.editorconfig</exclude>
-						<exclude>.gitattributes</exclude>
-						<exclude>.circleci/**</exclude>
-                        <exclude>**/pom.xml</exclude>
-                        <exclude>**/README</exclude>
-                        <exclude>**/settings.xml</exclude>
-						<exclude>docs/**</exclude>
-                        <exclude>src/test/resources/**</exclude>
-                        <exclude>src/main/resources/**</exclude>
-                        <exclude>src/etc/**</exclude>
-                        <exclude>src/main/config/**</exclude>
-                    </excludes>
-                    <headerDefinitions>
-                        <headerDefinition>src/main/config/headers.xml</headerDefinition>
-                    </headerDefinitions>
-                    <mapping>
-                        <java>JAVA_STYLE</java>
-                    </mapping>
-                </configuration>
-            </plugin>
-        </plugins>
-	</pluginManagement>
+		<pluginManagement>
+		   <plugins>
+		           <plugin>
+	                <groupId>com.mycila</groupId>
+	                <artifactId>license-maven-plugin</artifactId>
+	                <configuration>
+	                    <header>src/main/config/header.txt</header>
+	                    <properties>
+	                        <owner>Jean-Marie Dautelle, Werner Keil, Otavio Santana</owner>
+	                        <currentYear>2023</currentYear>
+	                    </properties>
+	                    <excludes>
+	                    	<exclude>.editorconfig</exclude>
+							<exclude>.gitattributes</exclude>
+							<exclude>.circleci/**</exclude>
+	                        <exclude>**/pom.xml</exclude>
+	                        <exclude>**/README</exclude>
+	                        <exclude>**/settings.xml</exclude>
+							<exclude>docs/**</exclude>
+	                        <exclude>src/test/resources/**</exclude>
+	                        <exclude>src/main/resources/**</exclude>
+	                        <exclude>src/etc/**</exclude>
+	                        <exclude>src/main/config/**</exclude>
+	                    </excludes>
+	                    <headerDefinitions>
+	                        <headerDefinition>src/main/config/headers.xml</headerDefinition>
+	                    </headerDefinitions>
+	                    <mapping>
+	                        <java>JAVA_STYLE</java>
+	                    </mapping>
+	                </configuration>
+	            </plugin>
+	            
+	            <plugin>
+				  <groupId>org.apache.maven.plugins</groupId>
+				  <artifactId>maven-enforcer-plugin</artifactId>
+				  <version>3.4.1</version>
+				</plugin>	            
+	        </plugins>
+		</pluginManagement>
 		<plugins>
 			<!-- ======================================================= -->
 			<!-- Compilation -->
@@ -196,11 +197,49 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>${project.build.javaVersion}</source>
-					<target>${project.build.javaVersion}</target>
-					<encoding>${project.build.sourceEncoding}</encoding>
-				</configuration>
+				<executions>
+					<execution>
+						<id>default-compile</id>
+						<configuration>
+							<!-- compile everything to ensure module-info contains right entries -->
+							<!-- required when JAVA_HOME is JDK 8 or below -->
+							<release>${jdkVersion}</release>
+							<source>${jdkVersion}</source>
+							<target>${jdkVersion}</target>
+							<argLine>
+    							--add-exports org.jboss.test.audit.annotations/org.jboss.test.audit.config=ALL-UNNAMED 
+    							--add-opens tech.units.tck=ALL-UNNAMED
+							</argLine>					
+						</configuration>
+					</execution>
+					<execution>
+						<id>base-compile</id>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+						<!-- recompile everything for target VM except the module-info.java -->
+						<configuration>
+							<release>8</release>
+							<source>8</source>
+							<target>8</target>
+							<excludes>
+								<exclude>module-info.java</exclude>
+							</excludes>
+						</configuration>
+					</execution>
+					<execution>
+				      <id>default-testCompile</id>
+				      <phase>process-test-sources</phase>
+				      <goals>
+				        <goal>testCompile</goal>
+				      </goals>
+				      <configuration>
+				        <release>${jdkVersion}</release>
+				        <source>${jdkVersion}</source>
+				        <target>${jdkVersion}</target>
+				      </configuration>
+				    </execution>
+				</executions>				
 			</plugin>
 
 			<!-- ======================================================= -->
@@ -367,6 +406,24 @@
 							<groupId>org.apache.maven.plugins</groupId>
 							<artifactId>maven-surefire-plugin</artifactId>
 						</plugin>
+						
+						<plugin>
+						  <groupId>org.apache.maven.plugins</groupId>
+						  <artifactId>maven-enforcer-plugin</artifactId>
+						  <executions>
+						    <execution>
+						      <id>enforce</id>
+						      <configuration>
+						        <rules>
+						          <dependencyConvergence/>
+						        </rules>
+						      </configuration>
+						      <goals>
+						        <goal>enforce</goal>
+						      </goals>
+						    </execution>
+						  </executions>
+						</plugin>
 
 						<!-- ======================================================= -->
 						<!-- Report on test results -->
@@ -436,13 +493,6 @@
     </distributionManagement>
 
 	<profiles>
-		<profile>
-			<id>jdk8</id>
-			<properties>
-				<jdkVersion>1.8</jdkVersion>
-			</properties>
-		</profile>
-
 		<profile>
 			<id>version</id>
 			<build>
